--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body{
+  background-color:rgba(245,245,245,255);
+}
 .App {
   text-align: center;
 }
@@ -6,11 +9,25 @@
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.workingdets{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 5vw;
+}
+.fder{
+  display: flex;
+  /* margin-bottom: 3vw; */
+  justify-content: center;
+}
+.hgfe{
+  width: 13vw; 
+  height: 2.6vw;
+  background-color: transparent;
+  font-size: 1vw;
+  font-weight: 600;
+  border: 0;
+  margin-right: 3vw;
+  cursor: pointer;
 }
 
 .App-header {
@@ -35,4 +52,33 @@
   to {
     transform: rotate(360deg);
   }
+}
+.stt{
+  font-size: 2vw;
+}
+.eatpro{
+  /* width: 100%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; 
+  /* align-items: center; */
+}
+.eatpro1{
+  display: flex;
+  flex-direction: column;
+}
+.menuwidth{
+  width: 80vw;
+  margin: 2vw 0;
+  position: relative;
+  left: 10%;
+  border: 0.1px solid grey;
+}
+@media only screen and (max-width:768px){
+     .hgfe{
+       font-size: 1.9vw;
+     }
+     .eatpro{
+       padding: 3vw;
+     } 
 }
